--- a/package.xml
+++ b/package.xml
@@ -16,6 +16,10 @@
         <name>ApexClass</name>
     </types>
     <types>
+        <members>Case.Standard</members>
+        <name>EscalationRule</name>
+    </types>
+    <types>
         <members>Account-Account %28Marketing%29 Layout</members>
         <members>Account-Account %28Sales%29 Layout</members>
         <members>Account-Account %28Support%29 Layout</members>
