--- a/package.xml
+++ b/package.xml
@@ -2,6 +2,10 @@
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <version>40.0</version>
     <types>
+        <members>xxsc</members>
+        <name>ActionLinkGroupTemplate</name>
+    </types>
+    <types>
         <members>ARApexclass2</members>
         <members>ARApexclass234</members>
         <members>ARApexclass2345</members>
