--- a/package.xml
+++ b/package.xml
@@ -21,6 +21,11 @@
         <name>ApexClass</name>
     </types>
     <types>
+        <members>Account.A_APPROVE</members>
+        <members>Account.AccountApprove</members>
+        <name>ApprovalProcess</name>
+    </types>
+    <types>
         <members>Case.Standard</members>
         <members>Lead.Standard</members>
         <name>AssignmentRule</name>
